// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`option watchFiles watchFiles.files 1`] = `
"
 html-bundler-webpack-plugin  Extract resources in entries 

watch files:
  - src/index.html
  - src/style.css

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
     style: src/style.css
         -> assets/css/style.7036e3af.css
  resource: src/image.png
         -> assets/img/image.697ef306.png
    script: src/main.js
         -> assets/js/main.2c7d3fc8.js

"
`;

exports[`option watchFiles watchFiles.ignore 1`] = `
"
 html-bundler-webpack-plugin  Extract resources in entries 

watch files:
  - src/index.html
  - src/main.js

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
     style: src/style.css
         -> assets/css/style.7036e3af.css
  resource: src/image.png
         -> assets/img/image.697ef306.png
    script: src/main.js
         -> assets/js/main.2c7d3fc8.js

"
`;

exports[`option watchFiles watchFiles.paths 1`] = `
"
 html-bundler-webpack-plugin  Extract resources in entries 

watch files:
  - src/index.html
  - templates/footer.html

 ENTRY  index.html 
source: src/index.html
output: dist/
assets:
     style: src/style.css
         -> assets/css/style.7036e3af.css
  resource: src/image.png
         -> assets/img/image.697ef306.png
    script: src/main.js
         -> assets/js/main.2c7d3fc8.js

"
`;

exports[`plugin options verbose output 1`] = `
"
 html-bundler-webpack-plugin  Extract resources in entries 

 ENTRY  index.html 
source: src/views/home/index.html
output: dist/
assets:
     style: src/styles/style.css
         -> css/style.507a33ff.css
            resource: src/fonts/dummy-font/font-01.woff2
                   -> ../assets/fonts/font-01.woff2
            resource: src/fonts/dummy-font/font-02.woff2
                   -> ../assets/fonts/font-02.woff2
    inline: src/styles/inlined.css?inline
            resource: src/images/pear.png
                   -> assets/img/pear.6b9b072a.png
              inline: src/images/iphone.png
              inline: src/images/imac.svg
            resource: src/images/plum.png
                   -> assets/img/plum.d39e7174.png
     style: src/views/home/style.css
         -> css/style.1a552ac3.css
            resource: src/images/kiwi.png
                   -> ../assets/img/kiwi.da3e3cc9.png
              inline: src/images/iphone.png
  resource: src/images/apple.png
         -> assets/img/apple.02a7c382.png
  resource: src/images/image.webp
         -> assets/img/image-160w.webp
    inline: src/images/imac.svg
    inline: src/images/iphone.png
    inline: src/images/home.svg
  resource: src/images/favorite.svg
         -> assets/img/favorite.876f98e8.svg
    script: src/views/home/home.js
         -> js/home.235b1a3d.js

 ENTRY  lang/de/index.html 
source: src/views/home/index.html
output: dist/
assets:
     style: src/styles/style.css
         -> ../../css/style.507a33ff.css
            resource: src/fonts/dummy-font/font-01.woff2
                   -> ../assets/fonts/font-01.woff2
            resource: src/fonts/dummy-font/font-02.woff2
                   -> ../assets/fonts/font-02.woff2
    inline: src/styles/inlined.css?inline
            resource: src/images/pear.png
                   -> ../../assets/img/pear.6b9b072a.png
              inline: src/images/iphone.png
              inline: src/images/imac.svg
            resource: src/images/plum.png
                   -> ../../assets/img/plum.d39e7174.png
     style: src/views/home/style.css
         -> ../../css/style.1a552ac3.css
            resource: src/images/kiwi.png
                   -> ../assets/img/kiwi.da3e3cc9.png
              inline: src/images/iphone.png
  resource: src/images/apple.png
         -> ../../assets/img/apple.02a7c382.png
  resource: src/images/image.webp
         -> ../../assets/img/image-160w.webp
    inline: src/images/imac.svg
    inline: src/images/iphone.png
    inline: src/images/home.svg
  resource: src/images/favorite.svg
         -> ../../assets/img/favorite.876f98e8.svg
    script: src/views/home/home.js
         -> ../../js/home.235b1a3d.js

 ENTRY  pages/about.html 
source: src/views/about/index.html
output: dist/
assets:
     style: @test-fixtures/scss/dist/fixture-styles.css
         -> ../css/fixture-styles.22de7687.css
            resource: @test-fixtures/scss/fixture-images/fixture-image-bg.png
                   -> ../assets/img/fixture-image-bg.697ef306.png
     style: src/styles/style.css
         -> ../css/style.507a33ff.css
            resource: src/fonts/dummy-font/font-01.woff2
                   -> ../assets/fonts/font-01.woff2
            resource: src/fonts/dummy-font/font-02.woff2
                   -> ../assets/fonts/font-02.woff2
    inline: src/styles/inlined.css?inline
            resource: src/images/pear.png
                   -> ../assets/img/pear.6b9b072a.png
              inline: src/images/iphone.png
              inline: src/images/imac.svg
            resource: src/images/plum.png
                   -> ../assets/img/plum.d39e7174.png
     style: src/views/about/style.css
         -> ../css/style.9a0dab35.css
            resource: src/images/melon.png
                   -> ../assets/img/melon.a92cb911.png
              inline: src/images/token.svg
  resource: src/images/fig.png
         -> ../assets/img/fig.c6809878.png
  resource: src/images/printer.webp?size=300
         -> ../assets/img/printer-300w.webp
  resource: src/images/printer.webp?sizes[]=200&sizes[]=400
         -> ../assets/img/printer-200w.webp 200w,../assets/img/printer-400w.webp 400w
    script: src/views/about/about-split.js
         -> chunks:
              - ../js/612.0ffbd578.js
              - ../js/about-split.4f313695.js
    inline: src/views/about/about-inline-split.js?inline
            inline chunks:
              - 544.d9bb278f.js
              - about-inline-split.45b83e21.js
    script: src/views/about/about.js
         -> ../js/about.3804b456.js

"
`;
